# =====================
# macOS Apple Silicon
# =====================
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))']
rustflags = [
    "-C", "target-cpu=apple-m1",
    "-C", "opt-level=3",
    "-C", "lto=fat",
    "-C", "codegen-units=1",
    "-C", "panic=abort"
]

# =====================
# Linux x86_64
# =====================
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))']
rustflags = [
    "-C", "target-cpu=native",
    "-C", "opt-level=3",
    "-C", "lto=fat",
    "-C", "codegen-units=1",
    "-C", "panic=abort"
]

# =====================
# Linux ARM64 (如 Graviton / Ampere)
# =====================
[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))']
rustflags = [
    "-C", "target-cpu=native",
    "-C", "opt-level=3",
    "-C", "lto=fat",
    "-C", "codegen-units=1",
    "-C", "panic=abort"
]

[package]
name = "lighting-match-engine-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Threading"] }

